--- a/index.html
+++ b/index.html
@@ -464,11 +464,22 @@
 
     </main>
     <!-- main End -->
+    <!-- last -->
+    <section class="container pt-5">
+        <h1 class="text-center d-lg-block d-none">Trusted by over 12k+ companies</h1>
+        <div class="pt-5 d-flex justify-content-between ">
+            <img src="images/company/company-1.png" class="img-fluid d-none d-lg-block" alt="">
+            <img src="images/company/company-2.png" class="img-fluid d-none d-lg-block" alt="">
+            <img src="images/company/company-3.png" class="img-fluid d-none d-lg-block" alt="">
+            <img src="images/company/company-4.png" class="img-fluid d-none d-lg-block" alt="">
+            <img src="images/company/company-5.png" class="img-fluid d-none d-lg-block" alt="">
+            <img src="images/company/company-6.png" class="img-fluid d-none d-lg-block" alt="">
+
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-
-
 
 </body>
 
