--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+    <script src="https://kit.fontawesome.com/c4262b6322.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -461,26 +462,50 @@
         </section>
         <!-- last -->
         <!-- Footer -->
+        <section class="container pt-5">
+            <h1 class="text-center d-lg-block d-none">Trusted by over 12k+ companies</h1>
+            <div class="pt-5 d-flex justify-content-between ">
+                <img src="images/company/company-1.png" class="img-fluid d-none d-lg-block" alt="">
+                <img src="images/company/company-2.png" class="img-fluid d-none d-lg-block" alt="">
+                <img src="images/company/company-3.png" class="img-fluid d-none d-lg-block" alt="">
+                <img src="images/company/company-4.png" class="img-fluid d-none d-lg-block" alt="">
+                <img src="images/company/company-5.png" class="img-fluid d-none d-lg-block" alt="">
+                <img src="images/company/company-6.png" class="img-fluid d-none d-lg-block" alt="">
 
+            </div>
+        </section>
     </main>
     <!-- main End -->
-    <!-- last -->
-    <section class="container pt-5">
-        <h1 class="text-center d-lg-block d-none">Trusted by over 12k+ companies</h1>
-        <div class="pt-5 d-flex justify-content-between ">
-            <img src="images/company/company-1.png" class="img-fluid d-none d-lg-block" alt="">
-            <img src="images/company/company-2.png" class="img-fluid d-none d-lg-block" alt="">
-            <img src="images/company/company-3.png" class="img-fluid d-none d-lg-block" alt="">
-            <img src="images/company/company-4.png" class="img-fluid d-none d-lg-block" alt="">
-            <img src="images/company/company-5.png" class="img-fluid d-none d-lg-block" alt="">
-            <img src="images/company/company-6.png" class="img-fluid d-none d-lg-block" alt="">
+    <!--  last -->
 
-        </div>
-    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
 
 </body>
+<footer class="mt-5 bg-dark" style="height: 300px;">
+    <h3 class="text-center text-white pt-5">Pro Edu</h3>
+    <p class="text-white text-center"><small>Office 41,<br> Zawaya Buildin, <br>Ghala Muscat, Sultanate of Oman <br>
+            Privacy Ploicy | Terms of use</small></p>
+    <div class=" d-flex justify-content-center  ">
+        <a href="www.facebook.com" class="pe-2"><i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="www.intragram.com" class="pe-2"><i class="fa-brands fa-instagram"></i></a>
+        <a href="www.linkdin.com" class="pe-2"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="www.tiktok.com" class="pe-2"><i class="fa-brands fa-tiktok"></i><a>
+                <a href="www.twitter.com" class="pe-2"><i class="fa-brands fa-twitter"></i><a>
+
+    </div>
+</footer>
+<ul style="list-style: none;" class="d-flex align-items-center">
+    <li class="me-4"><a class="text-light" style="font-size:13px" href=""><i class="fa-brands fa-facebook"></i></a>
+    </li>
+    <li class="me-4"><a class="text-light" style="font-size:13px" href=""><i
+                class="fa-brands fa-facebook-messenger"></i></a></li>
+    <li class="me-4"><a class="text-light" style="font-size:13px" href=""><i class="fa-brands fa-twitter"></i></a></li>
+    <li class="me-4"><a class="text-light" style="font-size:13px" href=""><i class="fa-brands fa-linkedin-in"></i></a>
+    </li>
+</ul>
 
 </html>
