--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
 </body>
 <footer class="mt-5 bg-dark" style="height: 300px;">
-    <h3 class="text-center text-white pt-5">Pro Edu</h3>
+    <h3 class="text-center text-white pt-5">E-larning</h3>
     <p class="text-white text-center"><small>Office 41,<br> Zawaya Buildin, <br>Ghala Muscat, Sultanate of Oman <br>
             Privacy Ploicy | Terms of use</small></p>
     <div class=" d-flex justify-content-center  ">
